
- webhelpers2.html.misc:

  * Delete ``format_number``. To display with thosands separators, use
    ``"{:,}".format(12346)`` (always comma) or ``"{:n}".format(12345)``
    (locale-specific).

- webhelpers.html.number:

  * Keep the individual statistic helpers but delete the container classes
    (``Stats`` and ``SimpleStats``).

- webhelpers.html.tags:

  * Delete ``required_legend()``.

- webhelpers2.html.tools: 

  * Merge 'webhelpers2.html.converters' into 'webhelpers2.html.tools'.
  * Rename ``format_paragraphs`` to ``text_to_html`` (from converters module).
  * Rename ``render`` to ``html_to_text`` (from converters module).
  * Bugfix in ``text_html``, should return a literal.

- webhelpers.misc:

  * Delete ``all``, ``any``, and ``no``.  Python >= 2.5 has builtins for the
    first two.
  * Rename ``convert_or_none`` to ``convert``.

- Delete the sample CSS stylesheet.

- Change test suite to py.test, and convert doctests to unit tests.


2.0b2 (2012-01-29)
------------------

- All HTML tag helpers now convert underscores to hyphens in attribute names. This
  is to support HTML5 "data-" attributes as keyword args. Trailing underscores
  are still removed ("class\_" -> "class"). (Bitbucket #55)

- webhelpers2.html.tools:

  * Delete 'highlighter' arg in ``highight`` helper. It has been deprecated
    since WebHelpers 1.0b2.


2.0b1 (2012-01-26)
------------------

- Import code and docs from WebHelpers 1.3. Source:
  https://bitbucket.org/bbangert/webhelpers/changeset/979fc4537c87c54eed933e5a84d43df51be88ff2
- Rename top-level package to ``webhelpers2``.
- Delete submodules: 

  * feedgenerator
  * html.grid
  * html.grid_demo
  * markdown
  * mimehelper
  * paginate
  * pylonslib (flash, grid, minify, secure_form)
  * textile
  * util

- webhelpers2.containers:
  
  * Delete Accumulator: use ``collections.defaultdict(list)`` in stdlib or 
    WebOb's '`MultiDict``. 
  * Delete UniqueAccumulator: use ``collections.defaultdict(set)`` in stdlib.
