@@ -18,7 +18,6 @@ import urlparse
 
 from webhelpers2 import containers
 from webhelpers2.html import escape, HTML, literal, url_escape
-import webhelpers2.media as media
 from webhelpers2.misc import NotGiven
 
 __all__ = [
@@ -913,8 +912,7 @@ def _list(tag, items, default, attrs, li_attrs):
     return getattr(HTML, tag)(content, **attrs)
     
 
-def image(url, alt, width=None, height=None, path=None, use_pil=False, 
-    **attrs):
+def image(url, alt, width=None, height=None, **attrs):
     """Return an image tag for the specified ``source``.
 
     ``url``
@@ -934,21 +932,6 @@ def image(url, alt, width=None, height=None, path=None, use_pil=False,
     ``height``
         The height of the image, default is not included.
 
-    ``path``
-        Calculate the width and height based on the image file at ``path`` if
-        possible. May not be specified if ``width`` or ``height`` is 
-        specified. The results are also written to the debug log for
-        troubleshooting.
-
-    ``use_pil``
-        If true, calcuate the image dimensions using the Python Imaging 
-        Library, which must be installed. Otherwise use a pure Python
-        algorithm which understands fewer image formats and may be less
-        accurate. This flag controls whether
-        ``webhelpers2.media.get_dimensions_pil`` or
-        ``webhelpers2.media.get_dimensions`` is called. It has no effect if
-        ``path`` is not specified.
-        
     Examples::
 
         >>> image('/images/rss.png', 'rss syndication')
@@ -965,26 +948,20 @@ def image(url, alt, width=None, height=None, path=None, use_pil=False,
 
         >>> image("/icons/icon.gif", None, width=16)
         literal(u'<img alt="" src="/icons/icon.gif" width="16" />')
+
+    Note: This version does not support the 'path' and 'use_pil' arguments,
+    because they depended on the WebHelpers 'media' subpackage which was
+    dropped in WebHelpers 2. 
     """
+    if "path" in attrs:
+        raise TypeError("the 'path' arg is not supported in WebHelpers2")
+    if "use_pil" in attrs:
+        raise TypeError("the 'use_pil' arg is not supported in WebHelpers2")
     if not alt:
         alt = ""
     if width is not None or height is not None:
         attrs['width'] = width
         attrs['height'] = height
-        if path:
-            raise TypeError(
-                "can't specify path if width and height are specified")
-    elif path:
-        if use_pil:
-            result = media.get_dimensions_pil(path)
-            msg = "using PIL"
-        else:
-            result = media.get_dimensions(path)
-            msg = "not using PIL"
-        abspath = os.path.abspath(path)
-        log.debug("image size is %s for '%s' (%s)", result, abspath, msg)
-        attrs['width'] = result[0]
-        attrs['height'] = result[1]
     return HTML.img(src=url, alt=alt, **attrs)
 
 #### Non-tag utilities
